@@ -1,6 +1,8 @@
- TBD        :  CALACS 9.1.1 ACSREJ calculations are now done entirely in
-                            electrons. Threshold formula now uses ERR arrays to
-                            account for post-flash noise, if any. And bug fixes.
+ 19-Jan-2018:  CALACS 10.0.0 ACSREJ calculations are done entirely in electrons. 
+                             Threshold formula uses ERR arrays to account for 
+                             post-flash noise.  CALACS uses amp-dependent read 
+                             noise as threshold to determine if a pixel has enough 
+                             S/N such that a reasonable correction can be applied.
  01-Jun-2017:  CALACS 9.2.0 New CTE algorithm implemented.
  21-Feb-2017:  CALACS 9.1.0 New SINKCORR step added in ACSCCD for WFC.
  22-Nov-2016:  CALACS 9.0.0 BLEVCORR now uses new OSCNTAB that correctly
