@@ -3,6 +3,6 @@
 
 /* This string is written to the output primary header as CAL_VER. */
 
-# define STIS_CAL_VER "3.4.1 (20-April-2017)"
+# define STIS_CAL_VER "3.4.2 (19-Jan-2018)"
 
 #endif /* INCL_STISVERSION_H */
