@@ -1,5 +1,9 @@
-### TBD - PLL  -- Version 9.1.1
-    ACSREJ calculations now in electrons. Threshold uses ERR arrays. Bug fixes.### 01-Jun-2017 - JAN -- Version 9.2.0
+### 19-Jan-2018 - JAN/MDD -- Version 10.0.0
+    ACSREJ calculations now in electrons, threshold uses ERR arrays.  CALACS 
+    uses amp-dependent read noise for threshold to determine if a correction can 
+    be applied. Bug fixes.
+
+### 01-Jun-2017 - JAN -- Version 9.2.0
     New CTE algorithm implemented. Use of either new (gen2) & old (gen1) 
     dynamically detected from CTE_NAME in PCTETAB, however --ctegen 1 is explicitly
     required to override the gen2 default.
